--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Automobiles -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: The Princess Passes
 url: http://www.gutenberg.org/ebooks/14740
